      content items.

    - Added __init__ method to the IOpaqueItems.ICallableOpaqueItem 
      interface.

    - CookieCrumber now supports logging the authenticated user id to
      the access log just like basic auth.

    - 'portal_setup' tool can now disply / download diffs between profiles
      and / or snapshots.
      
  Bug Fixes

    - Use the 'portal_metadata' tool's 'getPublisher' for the DublinCore
      'Publisher' element (thanks to Eric Brown for the patch).

    - CMFCalendar.CalendarTool: Code assumed US datetime format throughout.
      At least since Zope 2.7 users can change that.

    - CMFCalendar.Event: Day, month, and year were processed in the wrong
      order by Event.edit().
      Also see http://collector.zope.org/CMF/202

    - CMFCore.PortalFolder: _verifyObjectPaste() did not check the
      container's allowed content types, enabling users to paste objects
      they were not allowed to add.
      Also see http://collector.zope.org/CMF/216

    - CMFDefault.File and CMFDefault.Image: setFormat() failed to update
      the content_type property causing index_html() to use a stale mimetype
      when serving the file or image.
      Also see http://collector.zope.org/CMF/226

    - CMFDefault.Document, CMFDefault.Link, and CMFCalendar.Event: 
      WebDAV PUT() caused improper splitting of 'Contributors' metadata header.

    - CMFCore.PortalFolder: Fixed missing import of BadRequest exception.

    - DCWorkflow DefaultWorkflowClassic: Fixed 'pending' state permissions.

    - CMFSetup: Refactored actions, type-infos and workflow definition.
      Changed some XML attributes. Converted list items and descriptions to
      sub-elements.

    - ActionInformation: Some attribute cleanup.
      Enforced usage of 'Title' instead of 'Name', 'URL' or 'URL (Expression)'
      instead of 'Action'. Enforced boolean type of 'Visible'.

    - DiscussionTool: Fixed two acquisition bugs.
      (Collector #119 and #201)
