@@ -32,8 +32,13 @@ CMF 1.5.0-beta (unreleased)
       
   Bug Fixes
 
-    - Use the 'portal_metadata' tool's 'getPublisher' for the DublinCore
-      'Publisher' element (thanks to Eric Brown for the patch).
+    - CMFCalendar.CalendarTool: (Lost) fix for issues 65 and 159.
+      The determination of the date/time range constituting a specific month 
+      was faulty.
+
+    - CMFDefault.DublinCore: Use the portal_metadata tool's 'getPublisher' 
+      for the DublinCore 'Publisher' element (thanks to Eric Brown for the 
+      patch).
 
     - CMFCalendar.CalendarTool: Code assumed US datetime format throughout.
       At least since Zope 2.7 users can change that.
